Fixed the images not loading

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <p>Profile</p>
           </div>
           <div class="icon">
-            <img src="/images/message-outline.svg" alt="Messages" />
+            <img src="images/message-outline.svg" alt="Messages" />
             <p>Messages</p>
           </div>
           <div class="icon">
@@ -70,7 +70,7 @@
             <p>Tasks</p>
           </div>
           <div class="icon">
-            <img src="/images/account-group.svg" alt="Community" />
+            <img src="images/account-group.svg" alt="Community" />
             <p>Community</p>
           </div>
         </div>
